# what-does-it-meme

./: .dev.env  .dockerignore  .env  .gitignore  .test.env  Cargo.toml  Makefile  Procfile  README.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  test.Dockerfile
client/: package-lock.json  package.json
client/src/: App.svelte
client/src/api/: api_client.ts  index.ts
client/src/common/: location_utils.ts  svelte_utils.ts
client/src/components/: ChoosingMeme.svelte  CountDown.svelte  HandWithMemes.svelte  JoinRoomForm.svelte  MemeCard.svelte  NotStartedRoom.svelte  PlayerChip.svelte  PlayersProgress.svelte  ShowingResults.svelte  SituationCreation.svelte  Voting.svelte
client/src/layouts/: DefaultLayout.svelte
client/src/models/: room.ts
client/src/pages/: Home.svelte  HomePage.svelte  Room.svelte  (+1 more)
deploy/: docker-compose.test.yml  test.Dockerfile
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/apps/: mod.rs
server/src/apps/games/: mod.rs  models.rs  repository.rs  router.rs  schema.rs  services.rs  state_enum.rs  tables.rs
server/src/apps/memes/: mod.rs  models.rs  repository.rs  schema.rs  services.rs
server/src/apps/memes/scrapers/: interface.rs  know_your_meme.rs  local.rs  mod.rs
server/src/apps/players/: mod.rs  models.rs  repository.rs  router.rs  schema.rs  services.rs
server/src/apps/rooms/: models.rs  repository.rs  router.rs  schema.rs  services.rs  state_enum.rs
server/src/apps/rounds/: mod.rs  models.rs  repository.rs  schema.rs  services.rs  state_enum.rs
server/src/apps/users/: models.rs  repository.rs  schema.rs  services.rs
server/src/common/: config.rs  cors.rs  db.rs  errors.rs  headers.rs  jwt_service.rs  mod.rs  router.rs
server/src/tests/: mod.rs  test_games_crud.rs  test_players_crud.rs  test_rooms_crud.rs  test_round_lifecycle.rs  test_status_and_score.rs
server/static/: local_memes.txt
sql/: init.sql
src/: main.rs
(+4 files in other folders)
