[package]
name = "what_meme_it_is"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"

envconfig = "0.10.0"

diesel = { version = "1.4.8", features = ["r2d2", "postgres", "uuidv07"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

thiserror = "1.0.30"
