[package]
name = "what_does_it_meme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"

futures = "0.3.21"
async-trait = "0.1.53"

envconfig = "0.10.0"

r2d2 = "0.8.9"
diesel = { version = "1.4.8", features = ["r2d2", "postgres", "uuidv07"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

reqwest = "0.11.10"
scraper = "0.12.0"

thiserror = "1.0.30"
rand = "0.8.5"
itertools = "0.10.3"

[dev-dependencies]
lazy_static = "1.4.0"
actix-http = "3.0.4"
